--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 		<title>ImgPile</title>
 		<link rel="stylesheet" type="text/css" href="app.css">
 		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-		<script src="js/app.js"></script>
+		<script src="js/lib/mustache.js"></script>
+		<script src="js/lib/underscore.js"></script>
+		<script src="js/lib/backbone.js"></script>
+		<script src="js/App.js"></script>
 	</head>
 	<body>
 		<h1 id="image-heading">ImgPile</h1>
