Dropped images are now read into data urls.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<script src="js/lib/mustache.js"></script>
 		<script src="js/lib/underscore.js"></script>
 		<script src="js/lib/backbone.js"></script>
+		<script src="js/Image.js"></script>
 		<script src="js/App.js"></script>
 	</head>
 	<body>
