Dropped images now display. Also started styling layout.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 		<script src="js/App.js"></script>
 	</head>
 	<body>
-		<h1 id="image-heading">ImgPile</h1>
-		<ul id="image-list"></ul>
-		<h2 id="image-upload">Drop new images here</h2>
+		<div id="image-app">
+			<h1 id="image-heading">ImgPile</h1>
+			<ul id="image-list"></ul>
+			<h2 id="image-upload">Drop new images here</h2>
+		</div>
 	</body>
 </html>
