API now uses MySQL.

--- a/static/index.html
+++ b/static/index.html
@@ -2,8 +2,7 @@
 <html>
 	<head>
 		<title>ImgPile</title>
-		<link rel="stylesheet" type="text/css" href="app.css">
-		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="/static/app.css">
 		<script id="body-template" type="text/template">
 			<div id="image-app">
 				<h1 id="image-heading">ImgPile</h1>
@@ -40,13 +39,14 @@
 				</p>
 			</form>
 		</script>
-		<script src="js/lib/mustache.js"></script>
-		<script src="js/lib/underscore.js"></script>
-		<script src="js/lib/backbone.js"></script>
-		<script src="js/Template.js"></script>
-		<script src="js/Image.js"></script>
-		<script src="js/FullView.js"></script>
-		<script src="js/App.js"></script>
+		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+		<script src="/static/js/lib/mustache.js"></script>
+		<script src="/static/js/lib/underscore.js"></script>
+		<script src="/static/js/lib/backbone.js"></script>
+		<script src="/static/js/Template.js"></script>
+		<script src="/static/js/Image.js"></script>
+		<script src="/static/js/FullView.js"></script>
+		<script src="/static/js/App.js"></script>
 	</head>
 	<body>
 	</body>
